# Exchange_events_pipeline

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.lock.txt  terminal_commands_cheat_sheet.txt  wsgi.py
.github/workflows/: ci.yml
deploy/systemd/: exchange-events-alert.service  exchange-events-alert.timer  exchange-events-ingest.service  exchange-events-ingest.timer  exchange-events-web.service
docs/: DECISIONS.md  DEPLOYMENT_CHECKLIST.md  IMPLEMENTATION_PLAN.md  PROGRESS_LOG.md  REAL_DEPLOYMENT_LOG.md  USER_GUIDE.md  exchange_events_dashboard_design_doc.md
scripts/: bootstrap_server.sh  redeploy.sh  rollback.sh
src/exchange_events/: main.py  wiring.py
src/exchange_events/adapters/: __init__.py  base.py  bea.py  bls.py  bse.py  cme.py  config.py  econ.py  fomc.py  fred.py  iana.py  ism.py  krx.py  nse.py
src/exchange_events/alerting/: __init__.py  dispatcher.py  engine.py  routing.py
src/exchange_events/api/: __init__.py  app.py  (+2 more)
tests/contract/: test_live_adapters.py
tests/e2e/: test_full_pipeline.py
tests/fakes/: __init__.py  alert_log.py  channel.py  clock.py  http.py  iv_provider.py  normalizer.py  repository.py  smtp_transport.py  source_adapter.py
tests/integration/: conftest.py  test_alert_log.py  test_api.py  test_dashboard.py  test_repository.py  test_repository_concurrency.py
tests/unit/: test_adapters.py  test_alert_engine.py  test_alert_rules.py  test_alerts.py  test_config.py  test_contracts.py  test_events.py  test_exchange_zones.py  test_fakes.py  test_ids.py  test_infra.py  test_ingestion.py  test_main_cli.py  test_normalizer_util.py  test_normalizers.py  test_notification_channels.py  test_notification_dispatcher.py  test_query.py  test_reconciliation.py  test_serialization.py  test_wiring.py
(+79 files in other folders)
